--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2g
+    - uses: actions/checkout@v2
     - name: Set up Python 3.8.16
       uses: actions/setup-python@v1
       with:
